--- a/RengarHelper/RengarHelper.csproj
+++ b/RengarHelper/RengarHelper.csproj
@@ -33,16 +33,19 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EloBuddy">
-      <HintPath>..\..\..\Arktos\EloBuddy\System\EloBuddy.dll</HintPath>
+      <HintPath>..\..\EloBuddy\System\EloBuddy.dll</HintPath>
+    </Reference>
+    <Reference Include="EloBuddy.Sandbox">
+      <HintPath>..\..\EloBuddy\System\EloBuddy.Sandbox.dll</HintPath>
     </Reference>
     <Reference Include="EloBuddy.SDK">
-      <HintPath>..\..\..\Arktos\EloBuddy\System\EloBuddy.SDK.dll</HintPath>
+      <HintPath>..\..\EloBuddy\System\EloBuddy.SDK.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX">
-      <HintPath>..\..\..\Arktos\EloBuddy\System\SharpDX.dll</HintPath>
+      <HintPath>..\..\EloBuddy\System\SharpDX.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX.Direct3D9">
-      <HintPath>..\..\..\Arktos\EloBuddy\System\SharpDX.Direct3D9.dll</HintPath>
+      <HintPath>..\..\EloBuddy\System\SharpDX.Direct3D9.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
