AALaneclear, less greedy

--- a/RyzeAutoplay/RyzeAutoplay.csproj
+++ b/RyzeAutoplay/RyzeAutoplay.csproj
@@ -32,6 +32,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Items.cs" />
+    <Compile Include="Menu.cs" />
     <Compile Include="RyzeAutoplay.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
