--- a/Beta/RyzeAutoplayRework/RyzeAutoplayReworked.csproj
+++ b/Beta/RyzeAutoplayRework/RyzeAutoplayReworked.csproj
@@ -32,6 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="SummSpells.cs" />
     <Compile Include="Plugins\Ryze.cs" />
     <Compile Include="Shop\Items.cs" />
     <Compile Include="Helper.cs" />
