--- a/AutoQSS/AutoQSS.csproj
+++ b/AutoQSS/AutoQSS.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{2461AAC1-33C3-4281-A066-A7C9D5EF705F}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>KappaLeBlanc</RootNamespace>
-    <AssemblyName>KappaLeBlanc</AssemblyName>
+    <RootNamespace>AutoQSS</RootNamespace>
+    <AssemblyName>AutoQSS</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
