--- a/CloneControl/CloneControl.csproj
+++ b/CloneControl/CloneControl.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{2461AAC1-33C3-4281-A066-A7C9D5EF705F}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>KappaLeBlanc</RootNamespace>
-    <AssemblyName>KappaLeBlanc</AssemblyName>
+    <RootNamespace>CloneControl</RootNamespace>
+    <AssemblyName>CloneControl</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
