--- a/KaPoppy/KaPoppy.csproj
+++ b/KaPoppy/KaPoppy.csproj
@@ -60,8 +60,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DamageIndicator.cs" />
     <Compile Include="DashSpells\DashData.cs" />
     <Compile Include="DashSpells\DashDatabase.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="ItemManager.cs" />
     <Compile Include="Modes\Jungleclear.cs" />
     <Compile Include="Modes\Combo.cs" />
